Added parameter "startDate" and "filter" (solr query to filter records) to change discovery api. Also improved counting of events